# hashes_cpp20

./: CMakeLists.txt  README.md  main.cpp
include/: hashes.h  hashes_meta.h
